# FactSynth

./: .all-contributorsrc  .codespell-ignore-words  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.production  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .releaserc.json  .ruff.toml  .safety-policy.yml  .spectral.yaml  .trivyignore  .unify_branch_list.txt  .zipci-ignore  .zipci.yml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.MERGE.md  README.en.md  README.md  README.uk.md  README_ADDONS.md  README_BADGES.md  README_CI.md  README_MERGE_NOTE.md  README_TESTING.md  README_UA.md  SECURITY.md  cleanup_branches.sh  coverage.toml  coverage.xml  (+14 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml  KEEP  PULL_REQUEST_TEMPLATE.md  actionlint.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  ci_failure.md  config.yml  feature_request.md  feature_request.yml
.github/scripts/: protect_main.json  zipci_sanitize.py  zipci_sync.sh
.github/workflows/: ci-release.yml  ci.yml  cleanup_failed_branches.yml  codeql.yml  container-release.yml  container-scan.yml  conventional-commits.yml  dependency-baseline.yml  dependency-review.yml  docker.yml  docs-build.yml  docs-quality.yml  docs.yml  e2e-load.yml  factsynth-lock.yml  helm-chart.yml  helm.yml  link-check.yml  markdownlint.yml  openapi.yml  pages.yml  prompt-check.yml  prompts.yml  release-artifact.yml  release-chart.yml  release-on-tag.yml  release.yml  sbom.yml  scripts-quality.yml  scripts.yml  semantic-pr.yml  semantic-release.yml  slsa.yml  spec-verify.yml  trivy.yml  workflows-lint.yml  zipci.yml
app/: main.py
app/api/: verify.py
app/core/: factsynth_lock.py
app/services/: evaluator.py  retriever.py
benchmarks/: .gitignore  README.md  thresholds.json
charts/factsynth/: Chart.yaml  README.md  values-prod.yaml  values.yaml
config/: app.sample.yaml  quality_policy.yaml
config/prometheus/: alerts.yml
configs/: app.sample.yaml  glrtpm_example.yaml
deploy/nginx/: metrics.conf
deploy/traefik/: metrics.yml
docs/: FACTSYNTH_LOCK.md  INCUBATION_CO_DEV_UA.md  INCUBATION_MERGE_NOTE.md  PATCH_V2.md  PromptPack.md  addons.md  ai-ethics-bias-policy.md  api.md  architecture.md  domain-schema.md  index.md  prod-runbook.md  requirements.txt  runbook.md  security.md  testing.md  tracing.md  ui-deployment.md
docs/datasets/: golden_12.md  golden_factsynth.md
docs/models/: llm_arbitrator.md  nli.md
docs/ops/: runbook.md
eval/: run_golden.py
examples/python/: sdk_example.py
examples/typescript/: sdk_example.ts
factsynth_ultimate/: app.py  cli.py  config.py  logging.py
factsynth_ultimate/domain/: models.py  service.py
factsynth_ultimate/infra/: db.py  repository.py
factsynth_ultimate/plugins/: base.py  wiki.py
factsynth_ultimate/routers/: claims.py
fairness_tests/: test_fairness.py
fairness_tests/data/: fairness_control.json
golden/: cases.yaml
grafana/dashboards/: factsynth-overview.json
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  otel-collector.yaml  pdb.yaml  secret.yaml  service.yaml
openapi/: openapi.yaml
openapi/paths/: verify.yaml
openapi/postman/: FactSynth.postman_collection.json
patches/: Makefile.append
perf/: healthz-smoke.js
prompts/: .prettierignore  CHANGELOG.md  DEPLOYMENT_NOTES.md  FEW_SHOTS.md  GOLDEN_12_TESTSET.json  Makefile  README.md  SHASUMS256.txt  SYSTEM_PROMPT.md  TASK_TEMPLATES.md  USAGE_CHECKLIST.md  VALIDATION_REPORT.md  aurelius.system.md  builder.system.md  codex.system.md  coordinator.system.md  factsynth_lock.system.md  golden-12.json  nexus.system.md
prompts/FEW_SHOTS/: 01_intent_reflection.json  02_coverage_scoring.json  03_extractive_generation.json  04_streaming.json  05_problem_json.json
prompts/SCHEMAS/: domain.avsc  domain.schema.json  generate.output.schema.json  golden_12.schema.json  intent_reflector.output.schema.json  meta.schema.json  problem+json.schema.json  score.output.schema.json  stream.event.schema.json
prompts/TASK_TEMPLATES/: convert_intent_reflection.md  create_insight_pack.md  deploy_ops_healthcheck.md  improve_coverage_gap.md  (+1 more)
scripts/: README.md  bootstrap_full_product.sh  build_release.sh  check_benchmark_thresholds.py  dev_up.sh  extract_openapi.py  generate_coverage_badge.sh  quality_gate.py  regenerate_openapi.py  run_container_for_smoke.sh  setup-tests.sh  test.sh  typing_coverage.py  update-actions.sh  update_dev_requirements.sh
src/: main.py
tests/: conftest.py  factsynth_lock_examples.json  golden_12.yaml  golden_factsynth.json  mutmut.ini  test_akpshi.py  test_api.py  test_api_claims.py  test_api_glrtpm_endpoint.py  test_api_key_allowlist.py  test_api_key_file_precedence.py  test_api_key_prod.py  test_app.py  test_auth.py  test_auth_and_skiplist.py  test_base_headers.py  test_bias_filter.py  test_body_limit.py  test_body_limit_streaming.py  test_cache.py  test_callback_validation.py  test_cli.py  test_cli_commands.py  test_cli_help.py  test_cli_version.py  test_configs_parse.py  test_contract.py  test_core_health.py  test_core_middlewares.py  test_core_secrets.py  test_cors.py  test_domain_metadata.py  test_error_logging.py  test_errors.py  test_evaluator_api.py  test_factsynth_lock.py  test_factsynth_lock_contract.py  test_feedback.py  test_feedback_api.py  test_formatting_unit.py  (+54 more)
tools/: check_version.py  coverage_gate.py  factsynth_lock_lint.py  generate_openapi_index.py  make_badge.py  modernize_py_scripts.py  modernize_shell_scripts.py  prompt_lint.py  scripts_calibrate.py  validate_openapi.py
ui/: index.html  package-lock.json  package.json  roleplay.html  vite.config.js
документи/: PromptPack.md
(+228 files in other folders)
