[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factsynth-ultimate-pro"
version = "1.0.5"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "redis==6.4.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "prometheus-client==0.22.1",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "schemathesis==4.1.4",  # API contract testing
    "websockets==15.0.1",  # WebSocket test client
    "pytest-cov==7.0.0",  # coverage plugin
    "requests==2.32.5",  # HTTP client for contract tests (dev)
    "pip-audit==2.9.0",  # Python dependency vulnerability scanner
    "spectral==0.24",  # OpenAPI linting utility
    "fakeredis==2.23.5",  # Redis mock for tests
]
ops = [
    "prometheus-client==0.22.1",
]
cognition = [
    "numpy==1.24.4",
    "fastapi==0.110.3",
    "pydantic==2.11.7",
]
isr = [
    "jax==0.4.38",
    "diffrax==0.7.0",
    "typer==0.12.5",
]
numpy = [
    "numpy==1.26.4",
]

[project.scripts]
fsu-api = "factsynth_ultimate.app:create_app"
fsu-glrtpm = "factsynth_ultimate.glrtpm.pipeline:GLRTPMPipeline"
fsu-isr = "factsynth_ultimate.cli_isr:app"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","Q","C90"]
ignore = ["E203","E266","E501"]
target-version = "py310"

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"

