[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "factsynth-ultimate"
version = "0.1.0"
description = "FactSynth — verifiable fact-checking engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="neuron7x"}]
license = {text="MIT"}
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "structlog>=24.1",
  "python-json-logger>=2.0",
  "tenacity>=9.0",
  "redis>=5.0",
  "rq>=1.16",
  "slowapi>=0.1.9",
  "typer>=0.12",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.6.5",
  "codespell>=2.3.0",
  "types-redis",
  "types-requests",
  "hypothesis>=6.112",
]

[project.scripts]
factsynth = "factsynth_ultimate.cli:app"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","N","UP","B","SIM","S","C4","PIE","Q","RUF"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["factsynth_ultimate"]
omit = ["tests/*","scripts/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
