[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factsynth-ultimate-pro"
version = "1.0.5"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "cachetools==6.2.0",
    "redis==6.4.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "prometheus-client==0.22.1",
    "pycountry==24.6.1",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "python-json-logger==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.0.0",  # asyncio plugin for async tests
    "schemathesis==4.1.4",  # API contract testing
    "websockets==15.0.1",  # WebSocket test client
    "pytest-cov==7.0.0",  # coverage plugin
    "requests==2.32.5",  # HTTP client for contract tests (dev)
    "pip-audit==2.9.0",  # Python dependency vulnerability scanner
    "spectral==0.24",  # OpenAPI linting utility
    "fakeredis==2.23.1",  # Redis mock for tests
    "hypothesis==6.138.17",  # Property-based testing
    "numpy==1.26.4",  # Numerical computations in tests
    "jax==0.4.38",  # JAX core for diffrax
    "jaxlib==0.4.38",  # JAX runtime
    "diffrax==0.7.0",  # Differential equation solver used in tests
    "pre-commit==4.3.0",  # Git hooks runner
    "pytest-httpx==0.35.0",  # HTTPX mocking for tests
    "pip-tools==7.5.0",  # requirements management
    "time-machine==2.19.0",  # time travel for tests
    "mutmut==3.3.1",  # mutation testing
]
science = [
    "numpy==1.26.4",
    "jax==0.4.38",
    "diffrax==0.7.0",
]
ops = [
    "prometheus-client==0.22.1",
]
cognition = [
    "numpy==1.26.4",
    "fastapi==0.116.1",
    "pydantic==2.11.7",
]
isr = [
    "jax==0.4.38",
    "diffrax==0.7.0",
    "typer==0.17.4",
]
numpy = [
    "numpy==1.26.4",
]

[project.scripts]
fsu-api = "factsynth_ultimate.app:create_app"
fsu-glrtpm = "factsynth_ultimate.glrtpm.pipeline:GLRTPMPipeline"
fsu-isr = "factsynth_ultimate.cli_isr:app"
fsctl = "factsynth_ultimate.cli:main"

[project.entry-points."factsynth_ultimate.retrievers"]
fixture = "factsynth_ultimate.services.retrievers.local:create_fixture_retriever"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","Q","C90","S"]
ignore = ["E203","E266","E501"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]
"fairness_tests/**/*.py" = ["S101"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.interrogate]
fail-under = 60
ignore-init-module = true
ignore-semiprivate = true
style = "google"

